[package]
name = "seep"
version = "0.1.0"
edition = "2021"
publish = true
authors = ["Christoph J. Scherr <software@cscherr.de>"]
license = "MIT"
description = "print the stdin and redirect to stdout and files"
readme = "README.md"
homepage = "https://git.cscherr.de/PlexSheep/seep"
repository = "https://git.cscherr.de/PlexSheep/seep"
keywords = ["cli"]

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
